kubernetes/apps/media-server/jellyfin/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - jellyfin.${DOMAIN}
  rules:
    - backendRefs:
        - name: jellyfin
          namespace: media-server
          port: 8096
